--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
     "tuple": "cpp",
     "utility": "cpp",
     "variant": "cpp",
-    "atomic": "cpp"
+    "atomic": "cpp",
+    "vector": "cpp",
+    "deque": "cpp",
+    "string": "cpp"
   }
 }
