Cambios a eth.update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "atomic": "cpp",
     "vector": "cpp",
     "deque": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "span": "cpp"
   }
 }
